# analog-synth

./: .gitignore  .gitmodules  README.md  bluepill.md  rules.mk
expo_thermal_compensation/: README.md  find_values.py
firmware-midi/: Makefile  hardware.h  main.c  setup.c  usart.c  usbmidi.c  usbmidi.h
firmware-rust/: Cargo.toml  Makefile  build.rs
firmware-rust/schem/: schem-cache.lib  schem.sch  sym-lib-table
firmware-rust/src/: bu2505fv.rs  coop_threadsafe_container.rs  envelope.rs  main.rs  midi.rs  reverse_bits.rs  vco.rs
hardware/control_board_prototype/: README.md  bom.ods  control_board_prototype-cache.lib  control_board_prototype.kicad_pcb  control_board_prototype.pro  control_board_prototype.sch  fp-lib-table  sym-lib-table
hardware/lib/: schematic-symbols.dcm  schematic-symbols.lib
hardware/libtest/: fp-lib-table  libtest-cache.lib  libtest.kicad_pcb  libtest.sch
hardware/vca/: vca-cache.lib  vca.sch
hardware/vco_mk1/: README.md
hardware/voice_board/: README.md  bom.ods  fp-lib-table  sym-lib-table  voice_board-cache.lib  voice_board.kicad_pcb  voice_board.pro  voice_board.sch
measure_vco/: README.md
measure_vco/firmware/: .gdbinit  Makefile  hardware.h  main.c  setup.c  setup.h
measure_vco/schem/: measure_vco-cache.lib  measure_vco.bak  measure_vco.sch  vco.bak
measure_vco/software/: README.md  analyze_stability.py  compare.py  read_data.py  thermal_stability.py  time_stability.py
simulation/: vca.py
simulation/expo/: expo-cache.lib  expo.bak  expo.sch
simulation/filter_feedback/: filter_feedback-cache.lib  filter_feedback.bak  (+1 more)
(+174 files in other folders)
